--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -204,6 +204,14 @@
 #add-user .nav-tabs .nav-link.active {
   background-color: rgba(130, 49, 211, 0.1);
 }
+#add-user #feature {
+  opacity: 0;
+  visibility: hidden;
+}
+#add-user #feature.active {
+  opacity: 1;
+  visibility: visible;
+}
 
 .app__dashboard {
   font-family: "Jost", sans-serif;
@@ -345,7 +353,7 @@
 }
 .headerDashboard .navbar .nav-item.profile .dropdown .drop-header {
   margin: 10px;
-  padding: 20px 25px;
+  padding: 10px 25px;
 }
 .headerDashboard .navbar .nav-item.profile .dropdown .drop-header img {
   width: 32px;
@@ -728,6 +736,10 @@
 .main-content .data-list .content-body .table-body .product-list .action-icon button {
   color: #747474;
   margin-left: 8px;
+  transition: all 0.4s;
+}
+.main-content .data-list .content-body .table-body .product-list .action-icon button:hover {
+  color: #8231D3;
 }
 .main-content .data-list .content-body .table-body .product-list .product-img {
   width: 70px;
