--- a/assets/sass/Components/_modal-input.scss
+++ b/assets/sass/Components/_modal-input.scss
@@ -42,4 +42,12 @@
             }
         }
     }
+    #feature {
+        opacity: 0;
+        visibility: hidden;
+        &.active {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
 }
